hire laragon developer updates

--- a/css/style.css
+++ b/css/style.css
@@ -6680,3 +6680,12 @@ p{font-size:1.1rem;}
 	margin: auto;
 }
 }
+
+
+/************** Latest Css *************/
+
+
+.compaines .custom-container{
+	max-width: 1140px;
+    margin: auto;
+}
